--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -12,6 +13,7 @@
 
 html {
     overflow: hidden;
+    background-color: orange;
 }
 
 .flex {
