simple canvas zoom

--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,8 @@
     --sb-width: 300px;
 
     --main: rgb(127, 48, 176);
+    --btn-mb-0: rgb(66, 9, 102, 0);
+    --btn-mb-1: rgb(66, 9, 102, 1);
     --sb-bg: rgb(93, 77, 134, 0.5);
 }
 
