--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,13 @@
     --btn-mb-0: rgb(66, 9, 102, 0);
     --btn-mb-1: rgb(66, 9, 102, 1);
     --sb-bg: rgb(93, 77, 134, 0.5);
+    --grid-colour: rgb(211, 198, 218);
+
+    --node-bg: rgb(198, 188, 203);
+    --node-font-size: 12px;
 }
+
+
 
 li {
     list-style: none;
